--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "riscv"
+name = "riscvregs"
 version = "0.5.0"
 repository = "https://github.com/rust-embedded/riscv"
 authors = ["The RISC-V Team <risc-v@teams.rust-embedded.org>"]
@@ -9,7 +9,7 @@ keywords = ["riscv", "register", "peripheral"]
 license = "ISC"
 
 [lib]
-name = "riscv"
+name = "riscvregs"
 crate-type = ["rlib"]
 
 [dependencies]
